--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,7 +21,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .
-        pip install pytest
+        pip install pytest pytest-qt
+
+    - name: Check directory structure
+      run: |
+        ls -la
+        ls -la tests
 
     - name: Run tests
       run: |
